--- a/index.html
+++ b/index.html
@@ -3,10 +3,81 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+  	<header class='main-header'>
+  		<nav class='main-navigation'>
+  			<img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
+  			<ul class='main-navigation'>
+  				<li><a href='info.html'>Информация</li>
+  				<li><a href='media.html'></li>
+  				<li><a href='map.html'></li>
+  				<li><a href='hotels.html'></li>
+  			</ul>
+  		</nav>
+  	</header>
+  	<main class='container'>
+  		<div class="index-main-pic">
+  			<!--В css добавить картинку фона с надписями-->
+  		</div>
+  		<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+  		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+  <section class="reasons-attractions">
+  				<div class="reasons-info left">
+  					<h2 class="reasons-name">Настоящий городок</h2>
+  					<p class="reasons-number">— №1 —</p>
+  					<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
+  				</div>
+  				<section class="attractions">
+  					<div class="attractions-info left">	
+  						<h2 class="attractions-name">Жилье</h2>
+  						<p class="reasons-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+  					</div>
+  					<div class="attractions-info center">	
+  						<h2 class="attractions-name">Еда</h2>
+  						<p class="reasons-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+  					</div>
+  					<div class="attractions-info right">	
+  						<h2 class="attractions-name">Сувениры</h2>
+  						<p class="reasons-description">Не только китайского, но и местного производства!</p>
+  					</div>  				
+  				</section>
+  				</div>
+  				<div class="reasons-info right">
+  					<h2 class="reasons-name">Там есть мост дьявола</h2>
+  					<p class="reasons-number">— №2 —</p>
+  					<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+  				</div>
+  				<div class="reasons-info left">
+  					<h2 class="reasons-name">Небольшая площадь</h2>
+  					<p class="reasons-number">— №3 —</p>
+  					<p class="reasons-description">Все достопримечательности находятся очень близко</p>
+  				</div>
+  				<div class="reasons-info center">
+  					<h2 class="reasons-name">Красивая дорога</h2>
+  					<p class="reasons-number">— №4 —</p>
+  					<p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+  				</div>
+  				<div class="reasons-info right">
+  					<h2 class="reasons-name">Красивая дорога</h2>
+  					<p class="reasons-number">— №4 —</p>
+  					<p class="reasons-description">Больщинство едет в Гранд Каньон и толпится там</p>
+  				</div>
+  			</section>
+  				<div class="travel-search-form">
+  					<b class="travel-effect">Заинтересовались?</b>
+  					<p class="travel-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+  					<h2 class="travel-search">Поиск гостиницы в Седоне</h2>
+  					
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе  «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+  				
+
+
+  				<div>
+  			</section>
+  	</main>
+
 
   </body>
 </html>
