--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   		<nav class='main-navigation'>
   			<img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
   			<ul class='main-navigation'>
-  				<li><a href='info.html'>Информация</li>
-  				<li><a href='media.html'></li>
-  				<li><a href='map.html'></li>
-  				<li><a href='hotels.html'></li>
+  				<li><a href='info.html'>Информация</a></li>
+  				<li><a href='media.html'></a></li>
+  				<li><a href='map.html'></a></li>
+  				<li><a href='hotels.html'></a></li>
   			</ul>
   		</nav>
   	</header>
@@ -23,61 +23,70 @@
   		</div>
   		<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
   		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-  <section class="reasons-attractions">
-  				<div class="reasons-info left">
-  					<h2 class="reasons-name">Настоящий городок</h2>
-  					<p class="reasons-number">— №1 —</p>
-  					<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
+ 		<section class="reasons-attractions">
+  			<div class="reasons-info left">
+  				<h2 class="reasons-name">Настоящий городок</h2>
+  				<p class="reasons-number">— №1 —</p>
+  				<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
+  			</div>
+  			<section class="attractions">
+  				<div class="attractions-info left">	
+  					<h2 class="attractions-name">Жилье</h2>
+  					<p class="reasons-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
   				</div>
-  				<section class="attractions">
-  					<div class="attractions-info left">	
-  						<h2 class="attractions-name">Жилье</h2>
-  						<p class="reasons-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-  					</div>
-  					<div class="attractions-info center">	
-  						<h2 class="attractions-name">Еда</h2>
-  						<p class="reasons-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-  					</div>
-  					<div class="attractions-info right">	
-  						<h2 class="attractions-name">Сувениры</h2>
-  						<p class="reasons-description">Не только китайского, но и местного производства!</p>
-  					</div>  				
-  				</section>
+  				<div class="attractions-info center">	
+  					<h2 class="attractions-name">Еда</h2>
+  					<p class="reasons-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
   				</div>
-  				<div class="reasons-info right">
-  					<h2 class="reasons-name">Там есть мост дьявола</h2>
-  					<p class="reasons-number">— №2 —</p>
-  					<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-  				</div>
-  				<div class="reasons-info left">
-  					<h2 class="reasons-name">Небольшая площадь</h2>
-  					<p class="reasons-number">— №3 —</p>
-  					<p class="reasons-description">Все достопримечательности находятся очень близко</p>
-  				</div>
-  				<div class="reasons-info center">
-  					<h2 class="reasons-name">Красивая дорога</h2>
-  					<p class="reasons-number">— №4 —</p>
-  					<p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-  				</div>
-  				<div class="reasons-info right">
-  					<h2 class="reasons-name">Красивая дорога</h2>
-  					<p class="reasons-number">— №4 —</p>
-  					<p class="reasons-description">Больщинство едет в Гранд Каньон и толпится там</p>
-  				</div>
+  				<div class="attractions-info right">	
+  					<h2 class="attractions-name">Сувениры</h2>
+  					<p class="reasons-description">Не только китайского, но и местного производства!</p>
+  				</div>  				
   			</section>
-  				<div class="travel-search-form">
-  					<b class="travel-effect">Заинтересовались?</b>
-  					<p class="travel-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-  					<h2 class="travel-search">Поиск гостиницы в Седоне</h2>
-  					
-
-  				
-
-
-  				<div>
-  			</section>
-  	</main>
-
-
+  			<div class="reasons-info right">
+  				<h2 class="reasons-name">Там есть мост дьявола</h2>
+  				<p class="reasons-number">— №2 —</p>
+  				<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+  			</div>
+  			<div class="reasons-info left">
+  				<h2 class="reasons-name">Небольшая площадь</h2>
+  				<p class="reasons-number">— №3 —</p>
+  				<p class="reasons-description">Все достопримечательности находятся очень близко</p>
+  			</div>
+  			<div class="reasons-info center">
+  				<h2 class="reasons-name">Красивая дорога</h2>
+  				<p class="reasons-number">— №4 —</p>
+  				<p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+  			</div>
+  			<div class="reasons-info right">
+  				<h2 class="reasons-name">Красивая дорога</h2>
+  				<p class="reasons-number">— №4 —</p>
+  				<p class="reasons-description">Больщинство едет в Гранд Каньон и толпится там</p>
+  			</div>
+		</section>
+		<section class="travel-search">
+  		<div class="travel-search-form">
+				<!--В css добавить картинку карты-->
+  				<b class="travel-effect">Заинтересовались?</b>
+  				<p class="travel-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+  				<h2 class="travel-search">Поиск гостиницы в Седоне</h2>
+				<!--Форма поиска гостиницы в Седоне-->
+				<a href="#" class='button'>Найти</a>
+			</div>
+  	</section>
+	  </main>
+	  <footer class="main-footer">
+		  <a href="#" class="sedona-hashtag">#visitsedona
+        <ul>
+          <li><a class="social-button" href="#">Твиттер</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">YouTube</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>Website by</b> 
+        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+      </p>
+	</footer>
   </body>
 </html>
