--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   	</section>
 	  </main>
 	  <footer class="main-footer">
-		  <a href="#" class="sedona-hashtag">#visitsedona
+		  <a href="#" class="sedona-hashtag">#visitsedona</a>
         <ul>
           <li><a class="social-button" href="#">Твиттер</a></li>
           <li><a class="social-button" href="#">Фейсбук</a></li>
