--- a/hotels.html
+++ b/hotels.html
@@ -19,16 +19,90 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            
+        <main class="hotels-container">
+            <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
+            <section class="search- filters">
+                <div class="hotels-pic">
+                    <!--Здесь будет фон для фильтров-->
+                </div>
+                <!--Формы фильтров-->     
+            </section>
+            <section class="search-results">
+                <h2 class="search-results-number">Найдено: 3</h2>
+                <p>Сортировка:</p>
+                <ul class="search-sorting">
+                    <li><a class="sorting-button price current" href="#">По цене</a></li>
+                    <li><a class="sorting-button type" href="#">По типу</a></li>
+                    <li><a class="sorting-button rating" href="#">По рейтингу </a></li>
+                    <li><a class="sorting-button stars right" href="#">
+                        <!--Изображение сортировочной кнопки-->  
+                    </a></li>
+                </ul>
+                <ul class="found-hotels-results">
+                    <li class="found-hotel">
+                        <p class="found-hotel-image">
+                            <a href="found-hotel.html">
+                                <img src="img/hotel-1.jpg" width="220" height="165" alt="Amara Resort & Spa">
+                            </a>
+                        </p>
+                        <div class="found-hotel-information">
+                            <h3>
+                                <a href="found-hotel.html">Amara Resort & Spa</a>
+                            </h3>
+                            <b>Гостиница от 4000 р.</b>
+                            <a href="found-hotel-details.html">Подробнее</a>
+                            <a class="button" href="#">Забронировать</a>
+                        </div>
+                        <div class="found-hotel-ratings">
+                            <img src="stars/hotel-1.jpg"  width="10" height="10" alt="4 звезды">
+                            <p>Рейтинг: 8,5</p>
+                        </div>
+                    </li>
+                    <li class="found-hotel">
+                            <p class="found-hotel-image">
+                                <a href="found-hotel.html">
+                                    <img src="img/hotel-2.jpg" width="220" height="165" alt="Desert Quail Inn">
+                                </a>
+                            </p>
+                            <div class="found-hotel-information">
+                                <h3>
+                                    <a href="found-hotel.html">Desert Quail Inn</a>
+                                </h3>
+                                <b>Мотель от 3000 р.</b>
+                                <a href="found-hotel-details.html">Подробнее</a>
+                                <a class="button" href="#">Забронировать</a>
+                            </div>
+                            <div class="found-hotel-ratings">
+                                <img src="stars/hotel-2.jpg"  width="10" height="10" alt="3 звезды">
+                                <p>Рейтинг: 8,9</p>
+                            </div>
+                        </li>
+                        <li class="found-hotel">
+                                <p class="found-hotel-image">
+                                    <a href="found-hotel.html">
+                                        <img src="img/hotel-3.jpg" width="220" height="165" alt="Villas at Poco Diablo">
+                                    </a>
+                                </p>
+                                <div class="found-hotel-information">
+                                    <h3>
+                                        <a href="found-hotel.html">Villas at Poco Diablo</a>
+                                    </h3>
+                                    <b>Апартаменты от 2000 р.</b>
+                                    <a href="found-hotel-details.html">Подробнее</a>
+                                    <a class="button" href="#">Забронировать</a>
+                                </div>
+                                <div class="found-hotel-ratings">
+                                    <img src="stars/hotel-3.jpg"  width="10" height="10" alt="4 звезды">
+                                    <p>Рейтинг: 9,2</p>
+                                </div>
+                            </li>
 
 
 
 
 
-
-
-
+                </ul>
+            </section>
         </main>
         <footer class="main-footer">
                 <a href="#" class="sedona-hashtag">#visitsedona</a>
