--- a/hotels.html
+++ b/hotels.html
@@ -13,9 +13,9 @@
                 </a>
                 <ul class='main-navigation'>
                     <li><a href='info.html'>Информация</a></li>
-                    <li><a href='media.html'></a></li>
-                    <li><a href='map.html'></a></li>
-                    <li class="current-page"><a href='hotels.html'></a></li>
+                    <li><a href='media.html'>Фото и видео</a></li>
+                    <li><a href='map.html'>Карта штата</a></li>
+                    <li class="current-page"><a href='hotels.html'>Гостиницы</a></li>
                 </ul>
             </nav>
         </header>
