--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   			<img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
   			<ul class='main-navigation'>
   				<li><a href='info.html'>Информация</a></li>
-  				<li><a href='media.html'></a></li>
-  				<li><a href='map.html'></a></li>
-  				<li><a href='hotels.html'></a></li>
+  				<li><a href='media.html'>Фото и видео</a></li>
+  				<li><a href='map.html'>Карта штата</a></li>
+  				<li><a href='hotels.html'>Гостиницы</a></li>
   			</ul>
   		</nav>
   	</header>
@@ -82,7 +82,6 @@
           <li><a class="social-button" href="#">Фейсбук</a></li>
           <li><a class="social-button" href="#">YouTube</a></li>
         </ul>
-      </div>
       <p class="footer-copyright">
         <b>Website by</b> 
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
