Доработки хедера, рефакторинг

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
   	<header class='main-header'>
+				<a class="main-header-logo" href="#">
+						<img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
+				</a>
   		<nav class='main-navigation'>
-  			<img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
   			<ul class='main-navigation'>
   				<li><a href='info.html'>Информация</a></li>
   				<li><a href='media.html'>Фото и видео</a></li>
