--- a/hotels.html
+++ b/hotels.html
@@ -1,120 +1,132 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>HTML Academy: Отели Седона</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>  	
-        <header class='main-header'>
-            <nav class='main-navigation'>
-                <a class="main-header-logo" href="index.html">
-                    <img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
-                </a>
-                <ul class='main-navigation'>
-                    <li><a href='info.html'>Информация</a></li>
-                    <li><a href='media.html'>Фото и видео</a></li>
-                    <li><a href='map.html'>Карта штата</a></li>
-                    <li class="current-page"><a href='hotels.html'>Гостиницы</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main class="hotels-container">
-            <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
-            <section class="search- filters">
-                <div class="hotels-pic">
-                    <!--Здесь будет фон для фильтров-->
-                </div>
-                <!--Формы фильтров-->     
-            </section>
-            <section class="search-results">
-                <h2 class="search-results-number">Найдено: 3</h2>
-                <p>Сортировка:</p>
-                <ul class="search-sorting">
-                    <li><a class="sorting-button price current" href="#">По цене</a></li>
-                    <li><a class="sorting-button type" href="#">По типу</a></li>
-                    <li><a class="sorting-button rating" href="#">По рейтингу </a></li>
-                    <li><a class="sorting-button stars right" href="#">
-                        <!--Изображение сортировочной кнопки-->  
-                    </a></li>
-                </ul>
-                <ul class="found-hotels-results">
-                    <li class="found-hotel">
-                        <p class="found-hotel-image">
-                            <a href="found-hotel.html">
-                                <img src="img/hotel-1.jpg" width="220" height="165" alt="Amara Resort & Spa">
-                            </a>
-                        </p>
-                        <div class="found-hotel-information">
-                            <h3>
-                                <a href="found-hotel.html">Amara Resort & Spa</a>
-                            </h3>
-                            <b>Гостиница от 4000 р.</b>
-                            <a href="found-hotel-details.html">Подробнее</a>
-                            <a class="button" href="#">Забронировать</a>
-                        </div>
-                        <div class="found-hotel-ratings">
-                            <img src="stars/hotel-1.jpg"  width="10" height="10" alt="4 звезды">
-                            <p>Рейтинг: 8,5</p>
-                        </div>
-                    </li>
-                    <li class="found-hotel">
-                            <p class="found-hotel-image">
-                                <a href="found-hotel.html">
-                                    <img src="img/hotel-2.jpg" width="220" height="165" alt="Desert Quail Inn">
-                                </a>
-                            </p>
-                            <div class="found-hotel-information">
-                                <h3>
-                                    <a href="found-hotel.html">Desert Quail Inn</a>
-                                </h3>
-                                <b>Мотель от 3000 р.</b>
-                                <a href="found-hotel-details.html">Подробнее</a>
-                                <a class="button" href="#">Забронировать</a>
-                            </div>
-                            <div class="found-hotel-ratings">
-                                <img src="stars/hotel-2.jpg"  width="10" height="10" alt="3 звезды">
-                                <p>Рейтинг: 8,9</p>
-                            </div>
-                        </li>
-                        <li class="found-hotel">
-                                <p class="found-hotel-image">
-                                    <a href="found-hotel.html">
-                                        <img src="img/hotel-3.jpg" width="220" height="165" alt="Villas at Poco Diablo">
-                                    </a>
-                                </p>
-                                <div class="found-hotel-information">
-                                    <h3>
-                                        <a href="found-hotel.html">Villas at Poco Diablo</a>
-                                    </h3>
-                                    <b>Апартаменты от 2000 р.</b>
-                                    <a href="found-hotel-details.html">Подробнее</a>
-                                    <a class="button" href="#">Забронировать</a>
-                                </div>
-                                <div class="found-hotel-ratings">
-                                    <img src="stars/hotel-3.jpg"  width="10" height="10" alt="4 звезды">
-                                    <p>Рейтинг: 9,2</p>
-                                </div>
-                            </li>
 
+<head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Отели Седона</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
+<body>
+    <header class='main-header'>
+        <a class="main-header-logo" href="index.html">
+            <img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
+        </a>
+        <nav class='main-navigation'>
+            <ul class='main-navigation'>
+                <li><a href='info.html'>Информация</a></li>
+                <li><a href='media.html'>Фото и видео</a></li>
+                <li><a href='map.html'>Карта штата</a></li>
+                <li class="current-page"><a href='hotels.html'>Гостиницы</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="hotels-container">
+        <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
+        <section class="search- filters">
+            <div class="hotels-pic">
+                <!--Здесь будет фон для фильтров-->
+            </div>
+            <!--Формы фильтров-->
+        </section>
+        <section class="search-results">
+            <h2 class="search-results-number">Найдено: 3</h2>
+            <p>Сортировка:</p>
+            <ul class="search-sorting">
+                <li>
+                    <a class="sorting-button price current" href="#">По цене</a>
+                </li>
+                <li>
+                    <a class="sorting-button type" href="#">По типу</a>
+                </li>
+                <li>
+                    <a class="sorting-button rating" href="#">По рейтингу </a>
+                </li>
+                <li>
+                    <a class="sorting-button stars right" href="#">
+                        <!--Изображение сортировочной кнопки-->
+                    </a>
+                </li>
+            </ul>
+            <ul class="found-hotels-results">
+                <li class="found-hotel">
+                    <p class="found-hotel-image">
+                        <a href="found-hotel.html">
+                            <img src="img/hotel-1.jpg" width="220" height="165" alt="Amara Resort & Spa">
+                        </a>
+                    </p>
+                    <div class="found-hotel-information">
+                        <h3>
+                            <a href="found-hotel.html">Amara Resort & Spa</a>
+                        </h3>
+                        <b>Гостиница от 4000 р.</b>
+                        <a href="found-hotel-details.html">Подробнее</a>
+                        <a class="button" href="#">Забронировать</a>
+                    </div>
+                    <div class="found-hotel-ratings">
+                        <img src="stars/hotel-1.jpg" width="10" height="10" alt="4 звезды">
+                        <p>Рейтинг: 8,5</p>
+                    </div>
+                </li>
+                <li class="found-hotel">
+                    <p class="found-hotel-image">
+                        <a href="found-hotel.html">
+                            <img src="img/hotel-2.jpg" width="220" height="165" alt="Desert Quail Inn">
+                        </a>
+                    </p>
+                    <div class="found-hotel-information">
+                        <h3>
+                            <a href="found-hotel.html">Desert Quail Inn</a>
+                        </h3>
+                        <b>Мотель от 3000 р.</b>
+                        <a href="found-hotel-details.html">Подробнее</a>
+                        <a class="button" href="#">Забронировать</a>
+                    </div>
+                    <div class="found-hotel-ratings">
+                        <img src="stars/hotel-2.jpg" width="10" height="10" alt="3 звезды">
+                        <p>Рейтинг: 8,9</p>
+                    </div>
+                </li>
+                <li class="found-hotel">
+                    <p class="found-hotel-image">
+                        <a href="found-hotel.html">
+                            <img src="img/hotel-3.jpg" width="220" height="165" alt="Villas at Poco Diablo">
+                        </a>
+                    </p>
+                    <div class="found-hotel-information">
+                        <h3>
+                            <a href="found-hotel.html">Villas at Poco Diablo</a>
+                        </h3>
+                        <b>Апартаменты от 2000 р.</b>
+                        <a href="found-hotel-details.html">Подробнее</a>
+                        <a class="button" href="#">Забронировать</a>
+                    </div>
+                    <div class="found-hotel-ratings">
+                        <img src="stars/hotel-3.jpg" width="10" height="10" alt="4 звезды">
+                        <p>Рейтинг: 9,2</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer class="main-footer">
+        <a href="#" class="sedona-hashtag">#visitsedona</a>
+        <ul>
+            <li>
+                <a class="social-button" href="#">Твиттер</a>
+            </li>
+            <li>
+                <a class="social-button" href="#">Фейсбук</a>
+            </li>
+            <li>
+                <a class="social-button" href="#">YouTube</a>
+            </li>
+        </ul>
+        <p class="footer-copyright">
+            <b>Website by</b>
+            <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
+    </footer>
+</body>
 
-
-
-                </ul>
-            </section>
-        </main>
-        <footer class="main-footer">
-                <a href="#" class="sedona-hashtag">#visitsedona</a>
-              <ul>
-                <li><a class="social-button" href="#">Твиттер</a></li>
-                <li><a class="social-button" href="#">Фейсбук</a></li>
-                <li><a class="social-button" href="#">YouTube</a></li>
-              </ul>
-            <p class="footer-copyright">
-              <b>Website by</b> 
-              <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-            </p>
-          </footer>
-    </body>
 </html>
