--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   				<p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
   			</div>
   			<div class="reasons-info right">
-  				<h2 class="reasons-name">Красивая дорога</h2>
-  				<p class="reasons-number">— №4 —</p>
-  				<p class="reasons-description">Больщинство едет в Гранд Каньон и толпится там</p>
+  				<h2 class="reasons-name">Мало туристов</h2>
+  				<p class="reasons-number">— №5 —</p>
+  				<p class="reasons-description">Большинство едет в гранд каньон и толпится там</p>
   			</div>
 		</section>
 		<section class="travel-search">
