Content imgs added
Выполнено 3 задание

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
   	<header class='main-header'>
 				<a class="main-header-logo" href="#">
-						<img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
+						<img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
 				</a>
   		<nav class='main-navigation'>
   			<ul class='main-navigation'>
@@ -21,7 +21,8 @@
   	</header>
   	<main class='container'>
   		<div class="index-main-pic">
-  			<!--В css добавить картинку фона с надписями-->
+				<img src="img/ind/index-main-group.jpg" width='1200' height="800" alt='Картинка Добро пожаловать в Седону'>
+				<!-- Свойство :after для полигона -->
   		</div>
   		<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
   		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -29,7 +30,8 @@
   			<div class="reasons-info left">
   				<h2 class="reasons-name">Настоящий городок</h2>
   				<p class="reasons-number">— №1 —</p>
-  				<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
+					<p class="reasons-description">Седона — не аттракцион для туристов, там течет своя жизнь</p>
+					<img src="img/ind/reason-number-1.jpg" width="800" alt="Фото в городе Седона">
   			</div>
   			<section class="attractions">
   				<div class="attractions-info left">	
@@ -48,7 +50,8 @@
   			<div class="reasons-info right">
   				<h2 class="reasons-name">Там есть мост дьявола</h2>
   				<p class="reasons-number">— №2 —</p>
-  				<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					<p class="reasons-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					<img src="img/ind/reason-number-2.jpg" width="800" alt="Фото моста дьявола">
   			</div>
   			<div class="reasons-info left">
   				<h2 class="reasons-name">Небольшая площадь</h2>
@@ -68,7 +71,7 @@
 		</section>
 		<section class="travel-search">
   		<div class="travel-search-form">
-				<!--В css добавить картинку карты-->
+				<img src="img/ind/map.jpg" width="1200" alt="Город Седона на карте">
   				<b class="travel-effect">Заинтересовались?</b>
   				<p class="travel-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
   				<h2 class="travel-search">Поиск гостиницы в Седоне</h2>
