--- a/hotels.html
+++ b/hotels.html
@@ -10,20 +10,29 @@
 <body>
     <header class='main-header'>
         <a class="main-header-logo" href="index.html">
-            <img src="img/logo.svg" width='200' height="100" alt='Лого города Седона'>
+            <img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
         </a>
         <nav class='main-navigation'>
             <ul class='main-navigation'>
-                <li><a href='info.html'>Информация</a></li>
-                <li><a href='media.html'>Фото и видео</a></li>
-                <li><a href='map.html'>Карта штата</a></li>
-                <li class="current-page"><a href='hotels.html'>Гостиницы</a></li>
+                <li>
+                    <a href='info.html'>Информация</a>
+                </li>
+                <li>
+                    <a href='media.html'>Фото и видео</a>
+                </li>
+                <li>
+                    <a href='map.html'>Карта штата</a>
+                </li>
+                <li class="current-page">
+                    <a href='hotels.html'>Гостиницы</a>
+                </li>
             </ul>
         </nav>
     </header>
     <main class="hotels-container">
         <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
-        <section class="search- filters">
+        <section class="search-filters">
+            <h2 class="visually-hidden">Фильтры выбора отелей</h2>
             <div class="hotels-pic">
                 <!--Здесь будет фон для фильтров-->
             </div>
@@ -52,7 +61,7 @@
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotel-1.jpg" width="220" height="165" alt="Amara Resort & Spa">
+                            <img src="img/hotels/hotel-1.png" width="135" height="90" alt="Фото отеля Amara Resort & Spa">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -64,14 +73,14 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="stars/hotel-1.jpg" width="10" height="10" alt="4 звезды">
+                        <img src="img/star.svg" width="18" height="17" alt="4 звезды">
                         <p>Рейтинг: 8,5</p>
                     </div>
                 </li>
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotel-2.jpg" width="220" height="165" alt="Desert Quail Inn">
+                            <img src="img/hotels/hotel-2.png" width="135" height="90" alt="Фото отеля Desert Quail Inn">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -83,14 +92,14 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="stars/hotel-2.jpg" width="10" height="10" alt="3 звезды">
+                        <img src="img/star.svg" width="18" height="17" alt="3 звезды">
                         <p>Рейтинг: 8,9</p>
                     </div>
                 </li>
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotel-3.jpg" width="220" height="165" alt="Villas at Poco Diablo">
+                            <img src="img/hotels/hotel-3.png" width="135" height="90" alt="Фото отеля Villas at Poco Diablo">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -102,7 +111,7 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="stars/hotel-3.jpg" width="10" height="10" alt="4 звезды">
+                        <img src="img/star.svg" width="18" height="17" alt="2 звезды">
                         <p>Рейтинг: 9,2</p>
                     </div>
                 </li>
