--- a/hotels.html
+++ b/hotels.html
@@ -110,7 +110,8 @@
         </ul>
         <p class="footer-copyright">
             <b>Website by</b>
-            <a class="redirection-htmlacademy" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width='115' height="41" alt='Лого htmlacademy'></a>
+            <a class="redirection-htmlacademy" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width='115'
+                    height="41" alt='Лого htmlacademy'></a>
         </p>
     </footer>
 </body>
