--- a/hotels.html
+++ b/hotels.html
@@ -9,10 +9,10 @@
 
 <body>
     <header class='main-header'>
+        <a class="main-header-logo" href="index.html">
+            <img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
+        </a>
         <nav class='main-navigation'>
-            <a class="main-header-logo" href="index.html">
-                <img src="img/logo.svg" width='200' height="100" alt='Седона — небольшой городок в Аризоне, заслуживающий большего!'>
-            </a>
             <ul class='main-navigation'>
                 <li><a href='info.html'>Информация</a></li>
                 <li><a href='media.html'>Фото и видео</a></li>
@@ -44,7 +44,7 @@
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotel-1.jpg" width="220" height="165" alt="Amara Resort & Spa">
+                            <img src="img/hotels/hotel-1.png" width="135" height="90" alt="Фото отеля Amara Resort & Spa">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -56,14 +56,14 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="stars/hotel-1.jpg" width="10" height="10" alt="4 звезды">
+                        <img src="img/star.svg" width="18" height="17" alt="4 звезды">
                         <p>Рейтинг: 8,5</p>
                     </div>
                 </li>
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotel-2.jpg" width="220" height="165" alt="Desert Quail Inn">
+                            <img src="img/hotels/hotel-2.png" width="135" height="90" alt="Фото отеля Desert Quail Inn">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -75,14 +75,14 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="stars/hotel-2.jpg" width="10" height="10" alt="3 звезды">
+                        <img src="img/star.svg" width="18" height="17" alt="3 звезды">
                         <p>Рейтинг: 8,9</p>
                     </div>
                 </li>
                 <li class="found-hotel">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
-                            <img src="img/hotel-3.jpg" width="220" height="165" alt="Villas at Poco Diablo">
+                            <img src="img/hotels/hotel-3.png" width="135" height="90" alt="Фото отеля Villas at Poco Diablo">
                         </a>
                     </p>
                     <div class="found-hotel-information">
@@ -94,7 +94,7 @@
                         <a class="button" href="#">Забронировать</a>
                     </div>
                     <div class="found-hotel-ratings">
-                        <img src="stars/hotel-3.jpg" width="10" height="10" alt="4 звезды">
+                        <img src="img/star.svg" width="18" height="17" alt="2 звезды">
                         <p>Рейтинг: 9,2</p>
                     </div>
                 </li>
