--- a/hotels.html
+++ b/hotels.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Отели Седона</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
 </head>
 
 <body>
